@@ -34,17 +34,13 @@
     One can make use of all functionality which the PostScript
     printers have under Windows/MacOS when one uses the PPD file
     coming with the printer, downloaded from &lt;a
-    href="/download/PPD/">here on
-    linuxprinting.org&lt;/a>, from the manufacturer's home
-    page (&lt;a
-    href="http://hp.sourceforge.net/">http://hp.sourceforge.net/&lt;/a>
-    for all HP PostScript printers), or from &lt;a
+    href="/download/PPD/">here on linuxprinting.org&lt;/a>, from the
+    manufacturer's home page, or from &lt;a
     href="http://www.adobe.com/products/printerdrivers/winppd.html">Adobe's&lt;/a>
-    web site (do "&lt;tt>unzip -L
-    [filename].EXE&lt;/tt>" to get the PPD files). If there
-    are several different PPD files for your printer model and none
-    dedicated for Linux or Unix, the PPD for Windows NT works best in
-    most cases.&lt;p>
+    web site (do "&lt;tt>unzip -L [filename].EXE&lt;/tt>" to get the
+    PPD files). If there are several different PPD files for your
+    printer model and none dedicated for Linux or Unix, the PPD for
+    Windows NT works best in most cases.&lt;p>
 
 
     CUPS and PPR support PPD files directly, LPD/GNUlpr/LPRng, PDQ,
