@@ -1,5 +1,7 @@
 2005-07-19  Till Kamppeter <till.kamppeter@gmx.net>
 
+	* driver/Postscript.xml: Removed obsolete link.
+	
 	* driver/omni.xml: Added entry for IBM's Omni driver. IBM has
 	  taken it from the internet and so it is re-hosted on
 	  linuxprinting.org now.
